--- a/_brand.yml
+++ b/_brand.yml
@@ -2,7 +2,7 @@ meta:
   name: brand.yml
   link: https://datascicollab.github.io/brand-yml
 
-logo: logos/icon/brand-yml-icon-color.svg
+logo: https://avatars.githubusercontent.com/u/234071721?s=200&v=4
 
 color:
   palette:
