--- a/_brand.yml
+++ b/_brand.yml
@@ -2,7 +2,7 @@ meta:
   name: brand.yml
   link: https://datascicollab.github.io/brand-yml
 
-logo: https://avatars.githubusercontent.com/u/234071721?s=200&v=4
+logo: assets/dsc_logo.png 
 
 color:
   palette:
