try quartos strategy

--- a/brand.yml
+++ b/brand.yml
@@ -2,7 +2,11 @@ meta:
   name: brand.yml
   link: https://datascicollab.github.io/brand-yml
 
-logo: ../assets/dsc_logo.png
+logo: 
+  assets:
+    quarto-logo: 
+      path: https://quarto.org/quarto.png
+      alt: "Quarto icon"
 
 color:
   palette:
