--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
   output-dir: docs
 
-brand: brand/_brand.yml
+brand: _brand.yml
   
 website:
   title: "OTTR Template Website"
