--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,30 +2,10 @@ project:
   type: website
   output-dir: docs
 
-brand: _brand.yml
-  
 website:
-  title: "OTTR Template Website"
+  title: "Simple Brand Example"
   navbar:
-    left:
-    - text: ""
-      href: index.qmd
-      icon: fa-home
-    - text: 1. Setup
-      href: setup.qmd
-    - text: 2. Hosting
-      href: hosting.qmd
-    - text: Editing
-      href: editing.qmd
-    - text: 3. Style
-      href: style.qmd
-    - text: 4. Git Actions
-      href: git_actions.qmd
-    - text: More ottr docs
-      href: https://www.ottrproject.org/
-
-format:
-  html:
-    theme: cosmo
-    css: styles.css
-    toc: true
+    title: "Demo CO"
+    tools:
+      - icon: github
+        href: https://github.com/quarto-dev/quarto-examples/tree/main/brand/brand-simple
