--- a/brand.yml
+++ b/brand.yml
@@ -1,35 +1,17 @@
-meta:
-  name: brand.yml
-  link: https://datascicollab.github.io/brand-yml
-
-logo: 
-  images:
-    quarto-logo: 
-      path: https://quarto.org/quarto.png
-      alt: "Quarto icon"
-
 color:
   palette:
-    black: "#1A1A1A"
-    white: "#F9F9F9"
-    orange: "#FF6F20"
-    pink: "#FF3D7F"
-  foreground: black
-  background: white
-  primary: orange
-  danger: pink
+    dark-grey: "#222222"
+    blue: "#ddeaf1"
+  background: blue
+  foreground: dark-grey
+  primary: black
+
+logo: 
+  medium: logo.png
 
 typography:
   fonts:
-    - family: Open Sans
+    - family: Jura
       source: google
-    - family: Rubik
-      source: google
-    - family: IBM Plex Mono
-      source: google
-
-  base: Open Sans
-  headings:
-    family: Rubik
-    weight: 400
-  monospace: IBM Plex Mono
+  base: Jura
+  headings: Jura
