--- a/brand.yml
+++ b/brand.yml
@@ -4,7 +4,7 @@ color:
     blue: "#ddeaf1"
   background: blue
   foreground: dark-grey
-  primary: black
+  primary: pink
 
 logo: 
   medium: logo.png
