--- a/brand.yml
+++ b/brand.yml
@@ -1,8 +1,8 @@
 color:
   palette:
     dark-grey: "#222222"
-    blue: "#ddeaf1"
-  background: blue
+    pink: "#DE3163"
+  background: pink
   foreground: dark-grey
   primary: pink
 
