--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ website:
   title: "Data Science Collaborative"
   navbar:
     left:
-    - text: ""
+    - text: About
       href: index.qmd
       icon: fa-home
     - text: Fred Hutch DaSL
